이미지 클래스(z-img) 공통 적용

--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -828,7 +828,7 @@ input, button, select, optgroup, textarea {
   background-color: #339AF0;
   z-index: 100;
 }
-.z-form-header .z-logo {
+.z-form-header .i-form-designer {
   width: 12.5rem;
   padding: 0 0.75rem;
 }
