--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -823,7 +823,7 @@ input, button, select, optgroup, textarea {
   background-color: #339AF0;
   z-index: 100;
 }
-.z-process-header .z-logo {
+.z-process-header .i-process-designer {
   width: 12.5rem;
   padding: 0 0.75rem;
 }
