--- a/src/main/resources/public/scss/formDesigner/_layout.scss
+++ b/src/main/resources/public/scss/formDesigner/_layout.scss
@@ -22,7 +22,7 @@
     color: $layout-header-font-color;
     background-color: $layout-header-bg-color;
     z-index: $z-index-gnb;
-    .#{$common-prefix}logo {
+    .i-form-designer {
       width: 12.5rem; // 200px
       padding: 0 $layout-header-padding; // 0 12px
     }
