--- a/src/main/resources/public/scss/process/_layout.scss
+++ b/src/main/resources/public/scss/process/_layout.scss
@@ -24,7 +24,7 @@
     background-color: $layout-header-bg-color;
     z-index: $z-index-gnb;
 
-    .#{$common-prefix}logo {
+    .i-process-designer {
       width: 12.5rem; // 200px
       padding: 0 $layout-header-padding; // 0 12px
     }
