--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -19,28 +19,28 @@
         <h3 class="sub-title">업무통계</h3>
         <div id="statistic" class="flex-row">
             <div class="statistic-box flex-row align-items-center mr-4">
-                <img th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_document.png(theme=${#authentication.details.theme})}">
+                <img class="z-img i-dashboard-document" th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_document.png(theme=${#authentication.details.theme})}">
                 <div class="statistic-info">
                     <h3 class="statistic-count flex-row">1</h3>
                     <span class="statistic-type">처리할 문서</span>
                 </div>
             </div>
             <div class="statistic-box flex-row align-items-center mr-4">
-                <img th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_daily.png(theme=${#authentication.details.theme})}">
+                <img class="z-img i-dashboard-daily" th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_daily.png(theme=${#authentication.details.theme})}">
                 <div class="statistic-info">
                     <h3 class="statistic-count flex-row">0(3)</h3>
                     <span class="statistic-type">오늘</span>
                 </div>
             </div>
             <div class="statistic-box flex-row align-items-center mr-4">
-                <img th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_weekly.png(theme=${#authentication.details.theme})}">
+                <img class="z-img i-dashboard-weekly" th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_weekly.png(theme=${#authentication.details.theme})}">
                 <div class="statistic-info">
                     <h3 class="statistic-count flex-row">4(5)</h3>
                     <span class="statistic-type">이번 주</span>
                 </div>
             </div>
             <div class="statistic-box flex-row align-items-center">
-                <img th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_monthly.png(theme=${#authentication.details.theme})}">
+                <img class="z-img i-dashboard-monthly" th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_monthly.png(theme=${#authentication.details.theme})}">
                 <div class="statistic-info">
                     <h3 class="statistic-count flex-row">11(12)</h3>
                     <span class="statistic-type">이번 달</span>
