--- a/src/main/resources/public/template/document/documentPrint.html
+++ b/src/main/resources/public/template/document/documentPrint.html
@@ -13,7 +13,7 @@
     <div class="z-print">
         <div class="z-print-main">
             <div class="z-print-main-header">
-                <img src="/assets/media/images/zenius.ico" width="25" height="25">
+                <img class="z-img i-zenius" rc="/assets/media/images/zenius.ico" width="25" height="25">
                 <span class="float-right align-right" id="print-information"></span>
             </div>
             <div class="z-print-area">
