--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -20,9 +20,9 @@
 <th:block layout:fragment="portalContent">
     <div class="login-main flex-row">
             <div class="login-background">
-                <img class="login-logo" th:src="@{/assets/media/icons/icon_logo_white.svg}" width="234" height="40" alt="Zenius ITSM">
+                <img class="z-img i-logo-white" th:src="@{/assets/media/icons/icon_logo_white.svg}" width="234" height="40" alt="Zenius ITSM">
                 <a href="/portals/main" class="z-button light-secondary main-return float-right" th:text="#{portal.btn.main}"></a>
-                <img class="login-main-image" th:src="@{/assets/media/images/login/img_login_main.png}" width="1071" height="710" alt="Login Main">
+                <img class="z-img i-login-main" th:src="@{/assets/media/images/login/img_login_main.png}" width="1071" height="710" alt="Login Main">
             </div>
             <div class="login-form">
                 <h1 class="align-center" th:text="#{portal.label.login}"></h1>
