--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -23,7 +23,7 @@
                     <div class="card-header align-center">
                         <div class="icon">
                             <a href="/portals/notices/search">
-                                <img th:src="@{/assets/media/images/portal/img_portal_notice.png}" width="120" height="120" alt="Notice">
+                                <img class="z-img i-portal-notice" th:src="@{/assets/media/images/portal/img_portal_notice.png}" width="120" height="120" alt="Notice">
                             </a>
                         </div>
                         <h3 th:text="#{menu.notice.parent}"></h3>
@@ -36,7 +36,7 @@
                     <div class="card-header align-center">
                         <div class="icon">
                             <a href="/portals/faqs/ /view">
-                                <img th:src="@{/assets/media/images/portal/img_portal_faq.png}" width="120" height="120" alt="Faq">
+                                <img class="z-img i-portal-faq" th:src="@{/assets/media/images/portal/img_portal_faq.png}" width="120" height="120" alt="Faq">
                             </a>
                         </div>
                         <h3 th:text="#{menu.faq.parent}"></h3>
@@ -49,7 +49,7 @@
                     <div class="card-header align-center">
                         <div class="icon">
                             <a href="/portals/downloads/search">
-                                <img th:src="@{/assets/media/images/portal/img_portal_download.png}" width="120" height="120" alt="Download">
+                                <img class="z-img i-portal-download" th:src="@{/assets/media/images/portal/img_portal_download.png}" width="120" height="120" alt="Download">
                             </a>
                         </div>
                         <h3 th:text="#{menu.download.parent}"></h3>
