--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -31,7 +31,7 @@
 <div class="z-wrapper">
     <div class="z-process-container">
         <div class="z-process-header">
-            <img class="z-logo"  th:src="@{/assets/media/icons/process/topmenu/icon_process_designer.svg}" width="196" height="25" alt="Process Designer" />
+            <img class="z-img i-process-designer"  th:src="@{/assets/media/icons/process/topmenu/icon_process_designer.svg}" width="196" height="25" alt="Process Designer" />
             <span class="z-process-name ml-auto mr-auto" id="processName"></span>
             <!-- 버튼 영역 -->
             <div class="z-process-button-list flex-row mr-3">
