--- a/src/main/resources/public/template/token/tokenPrint.html
+++ b/src/main/resources/public/template/token/tokenPrint.html
@@ -13,7 +13,7 @@
     <div class="print">
         <div class="print-main flex-column align-items-center">
             <div class="print-main-header">
-                <img src="/assets/media/images/zenius.ico" width="25" height="25">
+                <img class="z-img i-zenius" src="/assets/media/images/zenius.ico" width="25" height="25">
                 <span class="float-right align-right" id="print-information"></span>
             </div>
             <div class="print-area justify-content-center">
