--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -908,7 +908,7 @@ input, button, select, optgroup, textarea {
   font-size: 1rem;
   font-weight: 500;
   color: #FFFFFF;
-  background-color: #0098FF;
+  background-color: #339AF0;
 }
 .portal-container .header .name {
   padding: 0 0.9375rem;
@@ -926,15 +926,15 @@ input, button, select, optgroup, textarea {
 }
 .portal-container .main-banner {
   height: 8.75rem;
-  background-color: #F7F8F9;
+  background-color: #FAFAFA;
 }
 .portal-container .main-banner .title {
   padding: 3.75rem 0 1.875rem 0;
 }
 .portal-container .main-search {
   height: 6.25rem;
-  background-color: #F7F8F9;
-  border-bottom: 0.0625rem solid #EBEBEB;
+  background-color: #FAFAFA;
+  border-bottom: 0.0625rem solid #CFD5D9;
   padding: 1.875rem 0;
 }
 .portal-container .main-search.slide-up + .portal-search-result .list {
@@ -948,7 +948,7 @@ input, button, select, optgroup, textarea {
 }
 .portal-container .main-content .card-group .card {
   width: 30rem;
-  border: 0.0625rem solid #EBEBEB;
+  border: 0.0625rem solid #CFD5D9;
 }
 .portal-container .main-content .card-group .card-header {
   padding-top: 3.4375rem;
@@ -971,10 +971,10 @@ input, button, select, optgroup, textarea {
   vertical-align: middle;
 }
 .portal-container .main-content .card-group .card-list table th:hover, .portal-container .main-content .card-group .card-list table td:hover {
-  background-color: rgba(230, 232, 235, 0.6);
+  background-color: #EEEEEE;
 }
 .portal-container .main-content .card-group .card-list table th a, .portal-container .main-content .card-group .card-list table td a {
-  color: #586872;
+  color: #63686C;
 }
 .portal-container .main-content .list {
   height: 647px;
@@ -982,7 +982,7 @@ input, button, select, optgroup, textarea {
 }
 .portal-container .main-content .list .row {
   width: 100%;
-  border-bottom: 0.0625rem solid #EBEBEB;
+  border-bottom: 0.0625rem solid #CFD5D9;
   padding: 0.8125rem 0;
 }
 .portal-container .main-content .list .row:last-child {
@@ -1006,7 +1006,7 @@ input, button, select, optgroup, textarea {
 .portal-container .main-content .list .row .item-content {
   font-size: 1rem;
   font-weight: 400;
-  color: #586872;
+  color: #63686C;
 }
 .portal-container .main-content .list .row .item-content .keyword {
   color: #0098FF;
@@ -1021,8 +1021,8 @@ input, button, select, optgroup, textarea {
 }
 .portal-container .faq-header {
   padding: 0 0 0 13.75rem;
-  background-color: #F7F8F9;
-  border-bottom: 0.0625rem solid #EBEBEB;
+  background-color: #FAFAFA;
+  border-bottom: 0.0625rem solid #CFD5D9;
 }
 .portal-container .faq-header .header-title {
   height: 10.625rem;
@@ -1037,7 +1037,7 @@ input, button, select, optgroup, textarea {
 .portal-container .faq-content .faq-group {
   position: relative;
   min-height: 3.438rem;
-  border: 0.0625rem solid #EBEBEB;
+  border: 0.0625rem solid #CFD5D9;
   border-radius: 0.0625rem;
   -webkit-border-radius: 0.0625rem;
   -moz-border-radius: 0.0625rem;
@@ -1049,7 +1049,7 @@ input, button, select, optgroup, textarea {
   border-bottom: 0.0625rem solid transparent;
   font-size: 1.125rem;
   font-weight: 500;
-  color: #3F4B56;
+  color: #63686C;
 }
 .portal-container .faq-content .faq-group-title::-webkit-details-marker {
   display: none;
@@ -1089,11 +1089,11 @@ input, button, select, optgroup, textarea {
   background: #8B9094;
 }
 .portal-container .faq-content .faq-group[open] {
-  border: 0.0625rem solid #0098FF;
+  border: 0.0625rem solid #339AF0;
 }
 .portal-container .faq-content .faq-group[open] .faq-group-title {
-  color: #0098FF;
-  border-bottom-color: #0098FF;
+  color: #339AF0;
+  border-bottom-color: #339AF0;
 }
 .portal-container .faq-content .faq-group[open] .faq-group-title .z-icon.i-plus {
   opacity: 0;
@@ -1103,7 +1103,7 @@ input, button, select, optgroup, textarea {
   opacity: 1;
 }
 .portal-container .faq-content .faq-group[open] .faq-row {
-  background-color: rgba(0, 152, 255, 0.05);
+  background-color: #E3F5FC;
 }
 .portal-container .faq-content .faq-row {
   padding: 20px 30px 0px 30px;
@@ -1117,24 +1117,24 @@ input, button, select, optgroup, textarea {
 .portal-container .faq-content .faq-row-title {
   font-size: 1rem;
   font-weight: 500;
-  color: #3F4B56;
+  color: #63686C;
 }
 .portal-container .faq-content .faq-row[open] .horizontal-bar {
   height: 0.0625rem;
   margin: 0.9375rem 0;
-  background-color: #0098FF;
+  background-color: #339AF0;
 }
 .portal-container .faq-content .faq-row-content {
   margin-top: 20px;
   margin-left: 17px;
   font-size: 1rem;
   font-weight: 400;
-  color: #586872;
+  color: #222529;
 }
 .portal-container .download-header {
   padding: 0 0 0 13.75rem;
-  background-color: #F7F8F9;
-  border-bottom: 0.0625rem solid #EBEBEB;
+  background-color: #FAFAFA;
+  border-bottom: 0.0625rem solid #CFD5D9;
 }
 .portal-container .download-header .header-title {
   height: 10.625rem;
@@ -1149,7 +1149,7 @@ input, button, select, optgroup, textarea {
 .portal-container .download-content .view-title {
   font-size: 1.125rem;
   font-weight: 500;
-  color: #3F4B56;
+  color: #222529;
   padding-bottom: 0.625rem;
   margin-bottom: 0.625rem;
   border-bottom: 0.125rem solid #E1E3E6;
@@ -1157,13 +1157,13 @@ input, button, select, optgroup, textarea {
 .portal-container .download-content .view-sub-title {
   font-size: 1rem;
   font-weight: 400;
-  color: #586872;
+  color: #8B9094;
   padding: 0 1.25rem;
 }
 .portal-container .download-content .view-content {
   font-size: 1rem;
   font-weight: 400;
-  color: #586872;
+  color: #222529;
   min-height: 13.4375rem;
   padding: 0.3125rem 1.25rem;
 }
@@ -1186,8 +1186,8 @@ input, button, select, optgroup, textarea {
 }
 .portal-container .notice-header {
   padding: 0 0 0 13.75rem;
-  background-color: #F7F8F9;
-  border-bottom: 0.0625rem solid #EBEBEB;
+  background-color: #FAFAFA;
+  border-bottom: 0.0625rem solid #CFD5D9;
 }
 .portal-container .notice-header .header-title {
   height: 10.625rem;
@@ -1202,7 +1202,7 @@ input, button, select, optgroup, textarea {
 .portal-container .notice-content .view-title {
   font-size: 1.125rem;
   font-weight: 500;
-  color: #3F4B56;
+  color: #222529;
   padding-bottom: 0.625rem;
   margin-bottom: 0.625rem;
   border-bottom: 0.125rem solid #E1E3E6;
@@ -1210,13 +1210,13 @@ input, button, select, optgroup, textarea {
 .portal-container .notice-content .view-sub-title {
   font-size: 1rem;
   font-weight: 400;
-  color: #586872;
+  color: #8B9094;
   padding: 0 1.25rem;
 }
 .portal-container .notice-content .view-content {
   font-size: 1rem;
   font-weight: 400;
-  color: #586872;
+  color: #222529;
   min-height: 13.4375rem;
   padding: 0.3125rem 1.25rem;
 }
@@ -1238,7 +1238,7 @@ input, button, select, optgroup, textarea {
   height: 35.44rem;
 }
 .portal-container .notice-content .notice-pinned {
-  background-color: rgba(135, 206, 255, 0.15);
+  background-color: #E3F5FC;
 }
 
 .slide-down {
@@ -2312,7 +2312,7 @@ table thead tr {
   border-bottom: 0.125rem solid #E1E3E6;
 }
 table thead tr th {
-  color: #3F4B56;
+  color: #63686C;
   vertical-align: middle;
 }
 table thead tr th:first-child {
@@ -2331,21 +2331,21 @@ table tbody tr {
 table tbody tr td {
   font-size: 1rem;
   font-weight: 400;
-  color: #586872;
+  color: #222529;
   vertical-align: middle;
 }
 table tbody tr td:first-child {
   padding-left: 1.25rem;
 }
 table tbody tr td a {
-  color: #586872;
+  color: #222529;
 }
 table tbody tr.no-data-found-list {
-  background-color: rgba(230, 232, 235, 0.6);
+  background-color: #EEEEEE;
   pointer-events: none;
 }
 table tbody tr:hover {
-  background-color: rgba(230, 232, 235, 0.6);
+  background-color: #EEEEEE;
 }
 
 /* _buttons.scss 
@@ -4743,7 +4743,7 @@ table tbody tr:hover {
 .login-main {
   height: 100%;
 }
-.login-logo {
+.login-main .i-logo-white {
   position: relative;
   top: 5rem;
   left: 5rem;
@@ -4751,10 +4751,10 @@ table tbody tr:hover {
 .login-background {
   width: calc(100vw - 38.13rem);
   height: 100%;
-  background-color: #0098FF;
+  background-color: #339AF0;
   overflow: hidden;
 }
-.login-background .login-main-image {
+.login-background .i-login-main {
   margin: 6.875rem 0 0 6.875rem;
 }
 .login-form {
@@ -4779,14 +4779,14 @@ table tbody tr:hover {
   flex-grow: 1;
   height: 0.063rem;
   margin-right: 1rem;
-  background: #EBEBEB;
+  background: #CFD5D9;
 }
 .login-divide::after {
   content: "";
   flex-grow: 1;
   height: 0.063rem;
   margin-left: 1rem;
-  background: #EBEBEB;
+  background: #CFD5D9;
 }
 .login-platform button {
   margin-bottom: 1rem;
@@ -4799,17 +4799,17 @@ table tbody tr:hover {
   margin-top: 6.188rem;
   font-size: 1rem;
   font-weight: 400;
-  color: #586872;
+  color: #222529;
 }
 .login-other .vertical-bar {
   width: 1.25rem;
   min-height: 2.5rem;
-  border-right: 0.0625rem solid #EBEBEB;
+  border-right: 0.0625rem solid #CFD5D9;
   margin: 0 1.875rem 0 0;
   vertical-align: middle;
 }
 .login-other a {
-  color: #586872;
+  color: #222529;
 }
 .login-other-signUp, .login-other-findPwd, .login-other-findId {
   flex: 1 0 auto;
@@ -4823,7 +4823,7 @@ table tbody tr:hover {
 .signup-main {
   height: 100%;
 }
-.signup-logo {
+.signup-main .i-signup-logo {
   position: relative;
   top: 5rem;
   left: 5rem;
@@ -4831,10 +4831,10 @@ table tbody tr:hover {
 .signup-background {
   width: calc(100vw - 38.13rem);
   height: 100%;
-  background-color: #0098FF;
+  background-color: #339AF0;
   overflow: hidden;
 }
-.signup-background .signup-main-image {
+.signup-background .i-signup-main-image {
   margin-top: 0.8125rem;
 }
 .signup-login-face {
@@ -4869,10 +4869,10 @@ table tbody tr:hover {
 .error-background {
   width: 50vw;
   height: 100vh;
-  background-color: #F2F5F9;
+  background-color: #FAFAFA;
   overflow: hidden;
 }
-.error-background .logo {
+.error-background .i-logo {
   position: relative;
   top: -59.1875rem;
   margin: 5rem 0 0 5rem;
@@ -4880,17 +4880,18 @@ table tbody tr:hover {
 .error-form {
   width: 50vw;
   padding: 16.875rem 5.625rem;
-  border-left: 0.0625rem solid #EBEBEB;
+  border-left: 0.0625rem solid #CFD5D9;
 }
 .error-form h1 {
+  color: #222529;
   line-height: 1.7;
 }
 .error-form .error-code-txt {
+  color: #339AF0;
   margin: 1.25rem 0;
-  color: #0098FF;
 }
 .error-form .error-bottom-txt {
-  color: #586872;
+  color: #63686C;
   margin: 5rem 0;
 }
 
@@ -4905,10 +4906,10 @@ table tbody tr:hover {
 .session-background {
   width: 50vw;
   height: 100vh;
-  background-color: #F2F5F9;
+  background-color: #FAFAFA;
   overflow: hidden;
 }
-.session-background .logo {
+.session-background .i-logo {
   position: relative;
   top: -59.1875rem;
   margin: 5rem 0 0 5rem;
@@ -4916,13 +4917,14 @@ table tbody tr:hover {
 .session-form {
   width: 50vw;
   padding: 21.5625rem 6.25rem;
-  border-left: 0.0625rem solid #EBEBEB;
+  border-left: 0.0625rem solid #CFD5D9;
 }
 .session-form h1 {
+  color: #222529;
   line-height: 1.7;
 }
 .session .session-count-txt {
-  color: #0098FF;
+  color: #339AF0;
 }
 
 /*
@@ -4932,7 +4934,7 @@ table tbody tr:hover {
  */
 .browser-guide-main {
   height: 100%;
-  background-color: #F7F8F9;
+  background-color: #FAFAFA;
 }
 .browser-guide-main h1 {
   margin: 14.81rem 19.6875rem 3.75rem 19.6875rem;
@@ -4943,7 +4945,7 @@ table tbody tr:hover {
   width: 22.5rem;
   height: 22.5rem;
   background-color: #FFFFFF;
-  border: 0.0625rem solid #EBEBEB;
+  border: 0.0625rem solid #CFD5D9;
   margin-left: 0.8125rem;
 }
 .browser-box img {
@@ -4955,9 +4957,9 @@ table tbody tr:hover {
   margin-top: 1.25rem;
 }
 .browser-box:hover {
-  -webkit-box-shadow: inset 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
-  -moz-box-shadow: inset 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
-  box-shadow: inset 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
+  -webkit-box-shadow: inset 0 0 0.9375rem 0 #ABB0B5;
+  -moz-box-shadow: inset 0 0 0.9375rem 0 #ABB0B5;
+  box-shadow: inset 0 0 0.9375rem 0 #ABB0B5;
 }
 
 /*
@@ -4971,10 +4973,10 @@ table tbody tr:hover {
 .email-certificate-background {
   width: 50vw;
   height: 100vh;
-  background-color: #F2F5F9;
+  background-color: #FAFAFA;
   overflow: hidden;
 }
-.email-certificate-background .logo {
+.email-certificate-background .i-logo {
   position: relative;
   top: -59.1875rem;
   margin: 5rem 0 0 5rem;
@@ -4982,13 +4984,14 @@ table tbody tr:hover {
 .email-certificate-form {
   width: 50vw;
   padding: 21.5625rem 6.25rem;
-  border-left: 0.0625rem solid #EBEBEB;
+  border-left: 0.0625rem solid #CFD5D9;
 }
 .email-certificate-form h1 {
+  color: #222529;
   line-height: 1.7;
 }
 .email-certificate-form h3 {
-  color: #586872;
+  color: #63686C;
   margin: 1.25rem 0 5rem 0;
 }
 
