--- a/src/main/resources/public/scss/portal/_session-invalid.scss
+++ b/src/main/resources/public/scss/portal/_session-invalid.scss
@@ -14,7 +14,7 @@
     background-color: $session-invalid-bg-color;
     overflow: hidden;
 
-    .logo {
+    .i-logo {
       @include relative($top: -59.1875rem); // -947px
       margin: 5rem 0 0 5rem; // 80px 80x
     }
@@ -25,9 +25,12 @@
     padding: 21.5625rem 6.25rem; // 345px 100px
     @include border(0.0625rem, solid, $session-invalid-border-color, left);
 
-    h1 { line-height: 1.7; }
+    h1 {
+      color: $session-invalid-font-color;
+      line-height: 1.7;
+    }
   }
 
-  .session-count-txt { color: $blue; }
+  .session-count-txt { color: $session-invalid-count-font-color; }
 }
 
