--- a/src/main/resources/public/scss/template/_layout.scss
+++ b/src/main/resources/public/scss/template/_layout.scss
@@ -5,7 +5,7 @@
  * @author jy.lim
  * @version 1.0
  */
-.#{$common-prefix}wrapper {
+.z-wrapper {
   display: flex;
   max-width: 120rem;
   margin: 0 auto;
