--- a/src/main/resources/public/template/board/boardArticlesView.html
+++ b/src/main/resources/public/template/board/boardArticlesView.html
@@ -78,7 +78,7 @@
             </div>
             <div class="reply-body" th:if="${boardAdminInfo.commentYn} and ${boardInfo?.boardId}">
                 <div class="flex-row align-items-center reply-input-row">
-                    <img class="profile-photo mr-2" alt="profile pic" th:src="${#authentication.details.avatarPath}"
+                    <img class="z-img i-profile-photo mr-2" alt="profile pic" th:src="${#authentication.details.avatarPath}"
                          width="32" height="32"/>
                     <input type="text" class="z-input reply-input" id="boardComments" name="boardComments" maxlength="500"
                            th:placeholder="#{comment.msg.enterComments}"/>
