--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -20,12 +20,12 @@
 <th:block layout:fragment="portalContent">
     <div class="signup-main flex-row">
         <div class="signup-background">
-            <img class="signup-logo" th:src="@{/assets/media/icons/icon_logo_white.svg}" width="234" height="40" alt="Zenius ITSM">
+            <img class="z-img i-signup-logo" th:src="@{/assets/media/icons/icon_logo_white.svg}" width="234" height="40" alt="Zenius ITSM">
             <div class="signup-login-face">
                 <span class="signup-login-note" th:text="#{login.label.loginNote}"></span>
                 <a class="z-button light-secondary signup-return" href="/login" id="sendLogin" th:text="#{login.btn.login}"></a>
             </div>
-            <img class="signup-main-image" th:src="@{/assets/media/images/signup/img_signup_main.png}" width="1310" height="800" alt="Signup Main">
+            <img class="z-img i-signup-main-image" th:src="@{/assets/media/images/signup/img_signup_main.png}" width="1310" height="800" alt="Signup Main">
         </div>
         <div class="signup-form">
             <h1 class="align-center" th:text="#{login.label.userSignUp}"></h1>
