--- a/src/main/resources/public/template/portal/portalList.html
+++ b/src/main/resources/public/template/portal/portalList.html
@@ -5,7 +5,7 @@
 <div class="list">
     <input th:type="hidden" id="totalCount" name="totalCount" th:value="${totalCount}"/>
     <div class="row flex-row align-items-center" th:each="portalList : ${portalList}">
-        <img th:src="@{|/assets/media/images/portal/img_portal_${portalList.tableName}.png|}" width="30" height="30">
+        <img class="z-img" th:src="@{|/assets/media/images/portal/img_portal_${portalList.tableName}.png|}" width="30" height="30">
         <div class="item-box">
             <h5 class="item-title underline text-ellipsis" th:switch="${portalList.tableName}">
                 <a th:case="#{'notice'}" th:href="@{/portals/notices/{id}/view(id=${portalList.portalId})}"
